Let a force put more than one ship in orbit
Orbital support was a single vessel: one ship name, one Gunnery, one list
of bays hanging off the player. A force that keeps a flotilla on station
had to nominate one of them and forget the rest.

Ship identity moves down onto the bay instead of a list of ships moving
up onto the player. OrbitalBay now carries the vessel it is aboard and
that vessel's Gunnery, and OrbitalSupport is a flat pool of bays from
however many ships are overhead. Every isAvailable/availableBays/findBay/
bayFired call site is unchanged; only the four places that read the ship
or the gunnery off the support as a whole had to move.

Consequences worth knowing:

- To-hit is now the firing bay's Gunnery, not the force's. A green
  corvette alongside an elite cruiser shoots like a green corvette.
- Bays are listed and reported qualified by their ship, so two vessels
  with a Nose bay can be told apart. A bay named at the prompt still
  matches the first available one of that name.
- Player Settings gained Ship and Gunnery columns; the two fields above
  the table now only seed new rows rather than holding the package.

Also fixes, in the same record, a bug that predates this change: bays
were stored with List.copyOf, and XStream 1.4 writes Java's immutable
lists as java.util.CollSer and then refuses to read its own output. Any
MegaMek save written while a player had orbital support - including
OrbitalSupport.NONE, which every player carries - failed to load, taking
the whole save with it. HexEditHandlerTest was red on this. The backing
list is now an ArrayList and the accessor hands out an unmodifiable view.

Orbital bombardment also gets its own Game Options section. The option
had no entry in the presentation catalogue at all, so it had nowhere to
appear in the dialog, and its "(Unofficial)" label did not match the
badge set. Four GameOptionsPaneTest failures, also pre-existing.

megamek: 17,107 tests, 0 failures.

Co-Authored-By: Claude Opus 5 <norep